# charts-api

./: .env.example  .gitignore  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py
app/api/v1/: deploy.py  health.py  status.py
app/backends/: argocd_backend.py  base.py  helm_backend.py
app/core/: exceptions.py  namespace.py  quota_profiles.py
app/scheduler/: ttl_scheduler.py
app/schemas/: deploy.py  status.py
app/services/: deployment_service.py
argocd-deploy/: Chart.yaml  values.yaml
chart/test-app/: Chart.yaml  values.yaml
chart/test-app/templates/: deployment.yaml  service.yaml
docker/: .env.example  Dockerfile  pyproject.toml  requirements.txt
docker/app/: config.py  dependencies.py  main.py
docker/app/api/v1/: deploy.py  health.py  router.py  status.py  users.py
docker/app/backends/: base.py  helm_backend.py
docker/app/core/: exceptions.py  namespace.py  quota_profiles.py
docker/app/scheduler/: ttl_scheduler.py
docker/app/schemas/: common.py  deploy.py  status.py
docker/app/services/: deployment_service.py  kubernetes_service.py  litellm_service.py  rancher_service.py
k8s/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  internal-ca-configmap.yaml  secret.yaml  service.yaml  serviceaccount.yaml
tests/: conftest.py  test_deploy_endpoint.py  test_deployment_service.py  test_quota_profiles.py
